<resources>
    <string name="app_name">TaskList</string>

    <string name="tab_list">Listes des tâches</string>
    <string name="tab_add">Ajouter une tâche</string>
    <string name="tab_calendar">Calendrier</string>

    <!-- Informations Tasks -->
    <string name="task_list_title">Liste des tâches</string>
    <string name="task_add_title">Ajouter une tâche</string>
    <string name="task_calendar_title">Calendrier</string>

    <string name="task_name_input">Nom</string>
    <string name="task_description_input">Description</string>
    <string name="task_date_input">Date</string>
    <string name="task_duration_input">Duree</string>
    <string name="task_add_button">Ajouter</string>
</resources>
