<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TabAddFragment">

    <TextView
        android:id="@+id/task_add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_add_title"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/task_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:hint="@string/task_name_input"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColor="@color/colorGreyDark"
        android:textSize="20sp"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/task_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:hint="@string/task_description_input"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColor="@color/colorGreyDark"
        android:textSize="20sp"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/task_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:hint="@string/task_date_input"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColor="@color/colorGreyDark"
        android:textSize="20sp"
        android:inputType="datetime"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/task_duration_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:hint="@string/task_duration_input"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColor="@color/colorGreyDark"
        android:textSize="20sp"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp" />


    <Button
        android:id="@+id/task_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/task_add_button"
        android:textSize="24sp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="32dp" />

</LinearLayout>