<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:tabTextColor="@color/colorWhite"
        app:tabSelectedTextColor="@color/colorGreyDark">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tab_list" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tab_add" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_calendar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tab_calendar" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>